--- a/static/css/booth/booth_detail.css
+++ b/static/css/booth/booth_detail.css
@@ -3,8 +3,41 @@ font-face {
     font-weight: 400;
     font-family: 'Pretendard-Regular';
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+}/* 제목 BOOTH */
+.title {
+     font-family: 'Felixti';
+    font-size: 7vw;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 35vw; /* 여백 조정 */
+    position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
+  }
+  @font-face {
+    font-family: 'Felixti'; /* 원하는 폰트 이름 */
+    src: url('static/font/Felixti.ttf') format('truetype'); /* .ttf 파일 경로 */
+    font-weight: normal;
+    font-style: normal;
 }
-
+/* PIESTA LOGO */
+#logoImg img
+{
+    width: 100%;
+}
+#logoImg {
+    position: fixed;
+    width: 60vw;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
+  }
+  .logoDate {
+    text-align: center;
+    font-family: "Pretendard-Regular";
+    color: #afafaf;
+    font-size: 2.5vw;
+    letter-spacing: 0.5vw;
+  }
 .logo p
 {
     color: #AFAFAF;
@@ -22,43 +55,9 @@ font-face {
 
 
 
-#logoImg {
-    position: fixed;
-    width: 60vw;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%); /* 수평 가운데 정렬만 */
-    text-align: center;
-    /* transform: translate(-50%, -50%); */
-    /* opacity: 0;
-    visibility: hidden; */
-    /* transition: opacity 0.3s ease-in-out, visibility 0s 0.3s; */
-}
-.logoDate {
-    text-align: center;
-    font-family: "Pretendard-Regular";
-    color: #AFAFAF;
-    font-size: 2.5vw;
-    letter-spacing: 0.5vw;
-}
-/* .logo-visible {
-    opacity: 1;
-    visibility: visible;
-} */
-
-.title
-{
-    color: white;
-    position: fixed;
-    top: 20%; /* 로고 아래에 비례해서 위치 설정 */
-    left: 50%;
-    transform: translateX(-50%); /* 수평 가운데 정렬만 */
-    font-family: 'Prata';
-    text-align: center;
-}
-
 .booth_detail h4
 {
+    font-weight: 700;
     display: inline-block;
     padding-right: 2.8vw;
     color: #9F8BEE;
@@ -79,9 +78,15 @@ font-face {
     text-align: center;
 }
 .separator {
-    border-top: 2px dashed gray; /* 점선 선 추가 */
-    flex: 0 1 50%; /* 점선의 길이 조정 */
-    margin: 0 1vw; /* 좌우 여백 추가 */
+    width: 50%; /* 선의 전체 길이 */
+    height: 2px; /* 선의 두께 */
+    background-image: repeating-linear-gradient(
+        to right,
+        gray 0,
+        gray 10px, /* 점선의 길이 (10px) */
+        transparent 10px, 
+        transparent 20px /* 점선 사이의 간격 (10px) */
+    );
 }
 
 .booth_name>h3
@@ -93,16 +98,17 @@ font-face {
 .content_box
 {
     position: absolute;
-    top: 26% ; /* 타이틀 아래 위치 */
+    top: 33%; /* 타이틀 아래 위치 */
     left: 50%;
     transform: translateX(-50%); /* 수평 가운데 정렬 */
-    width: 93vw; /* 반응형 너비 설정 */
-    height: 90vh; /* 반응형 높이 설정 */
+    width: 90vw; /* 반응형 너비 설정 */
+  
     background-color: rgba(255, 255, 255, 0.812);
     border-radius: 20px;
     border: 1px solid gray;
     box-sizing: border-box;
-    overflow-y: auto; /* 내용만 스크롤 가능 */
+    height: 70vh; /* 자동으로 높이를 설정해 줍니다 */ /* 최대 높이를 설정하고 초과할 경우 스크롤 */
+    overflow-y: auto !important; /* 내용이 넘칠 경우 스크롤 가능하도록 설정 */
     padding-top: 4.8vh;
     padding-bottom: 10vw;
 }
@@ -132,16 +138,12 @@ font-face {
     border-top: 1.5px solid #9F8BEE; /* 실선 추가 */
 }
 
-.booth_detail
-{
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom:2.2vh !important;
-}
-
 .booth_detail p 
 {
+    padding-top: 1vh;
+    font-size: 3.05vw;
     font-weight: 500;
+    line-height: 1.6; 
 }
 
 .fa-instagram
@@ -155,7 +157,7 @@ font-face {
 .booth_tt
 {
     width: 80%;
-    margin: 0 7vw 0 auto;
+    margin: 0 7vw 5vh auto;
 }
 .booth_time>div
 {
@@ -173,7 +175,7 @@ font-face {
 .booth_info
 {
     font-size: 3vw;
-    margin-top: 1.4vw;
+    margin-top: 2vw;
 }
 
 .booth_info span, .booth_info a
@@ -181,32 +183,15 @@ font-face {
     margin: 0vw 1vw;
 }
 
-.booth_detail h4
-{
-    font-weight: 700;
-}
 
 .booth_detail
 {
     font-size: 4.4vw;
     width: 80%;
     margin: 0 auto;
-    margin-bottom:2.2vh !important;
+    margin-bottom:5.5vh;
 }
 
-.booth_detail p 
-{
-    font-size: 3.05vw;
-}
-.booth_desc
-{
-    margin-bottom: 5vw;
-}
-
-.booth_menu
-{
-    margin-bottom: 5.5vw ;
-}
 .booth_time img
 {
    width: 10vw;
@@ -237,13 +222,27 @@ font-face {
     padding-right: 4vw;
     margin-bottom: 4.8vw;
 }
+.booth_name h3
+{
+    font-size: 6vw;
+}
 
 @media(max-width: 768px) 
 {
-    .title
-    {
-        font-size: 5vw;
+
+    .content_box
+    {height: auto;
+        top: 23%; /* 타이틀 아래 위치 */
+        width: 93vw; /* 반응형 너비 설정 */
     }
+   /* 제목 BOOTH */
+   .title {
+    font-size: 7vw;
+    color: #000000;
+    text-align: center;
+    margin-top: 35vw; /* 여백 조정 */
+    position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
+  }
 
     .booth_name h3
     {
@@ -263,25 +262,20 @@ font-face {
 
     .booth_detail
     {
-        font-size: 4.4vw;
-        width: 80%;
-        margin: 0 auto;
-        margin-bottom:3.8vw !important;
+        margin-bottom:4.2vh !important;
+    }
+
+    .booth_tt
+    {
+        margin: 0 7vw 4vh auto;
     }
 
     .booth_detail p 
     {
         font-size: 3.05vw;
     }
-    .booth_desc
-    {
-        margin-bottom: 5vw;
-    }
-   
-   .booth_menu
-   {
-        margin-bottom: 3.8vw !important;
-   }
+ 
+ 
    .booth_time img
    {
        width: 10vw;
@@ -295,11 +289,32 @@ font-face {
         margin-bottom: 2.3vw;
     }
 
-    
+    .content_box
+    {
+        max-height: 90vh;
+    }
 }
 @media (min-width: 768px) and (max-width: 1024px) 
 {
+ /* 제목 BOOTH */
+ .title {
+    font-family: "Prata";
+    font-size: 7vw;
+    
+    text-align: center;
+    margin-top: 35vw; /* 여백 조정 */
+    position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
+  }
 
+
+/* 상단 로고 */
+  #logoImg {
+    position: relative;
+    width: 80vw;
+    top: 5vw; /* 상단 여백 */
+    left: 50%;
+    transform: translateX(-50%);
+  }
     .content_box
     {
         position: absolute;
@@ -307,12 +322,12 @@ font-face {
         left: 50%;
         transform: translateX(-50%); /* 수평 가운데 정렬 */
         width: 85vw; /* 반응형 너비 설정 */
-        height: 70vh; /* 반응형 높이 설정 */
+        height: 90vh; /* 반응형 높이 설정 */
         background-color: rgba(255, 255, 255, 0.082);
         border-radius: 20px;
         border: 1px solid gray;
         box-sizing: border-box;
-        overflow-y: auto; /* 내용만 스크롤 가능 */
+        overflow-y: auto !important; /* 내용만 스크롤 가능 */
         padding-top: 10vw;
         padding-bottom: 10vw;
     }
@@ -321,17 +336,7 @@ font-face {
         border-bottom:3.5px solid #ADADAD;
     
     }
-    .title
-    {
-        top: 23%;
-        font-size: 4vw;
-    }
-    
-    .booth_name h3
-    {
-        font-size: 5vw;
-    }
-
+  
 
     .booth_detail h4
     {
@@ -340,106 +345,17 @@ font-face {
 
     .booth_detail p
     {
+        line-height: 2;
         font-size: 2.8vw;
     }
     .content_box>div
     {
         margin-bottom: 1vw;
     }
-  }
-
- /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
-@media (min-width: 1025px) 
-{
-    .title
-    {
-        top: 22%;
-        font-size: 2.3vw;
+    .line {
+        border-top: 2.5px solid #9F8BEE; /* 실선 추가 */
     }
-
-
-   .content_box
-   {
-    top: 28%;
-    width: 70%;
-    padding: 5vw 1vw;
-    height: 90vh;
-
-   }
-
- 
-   .fa-circle
-   {
-       font-size: 0.6vw;
-   }
-
-   .booth_detail p 
-   {
-        font-size: 1.65vw !important;
-        /* font-weight: 550; */
-    }
-
-    .booth_detail h4
-    {
-        font-size: 2.0vw;
-        padding-right: 1vw;
-    }
-    
-  .booth_name span
-  {
-    font-size: 2vw;
-  }
-
-  .booth_name h3
-  {
-    font-size: 2.8vw;
-  }
-
-  .booth_tt
-  {
-    margin-bottom: 2.2vw;
-  }
-    .heart img
-    {
-        width: 4vw;
-        padding-right: 2vw;
-    }
-
-    .fa-instagram
-    {
-    font-size: 2.6vw;
-    text-align: center;
-    }
-
-    .booth_detail 
-    {
-        font-size: 1.5rem;
-        margin-bottom: 3.5vw !important;
-    }
-    .booth_detail .line-wrapper
-    {
-        margin-bottom: 1.5vw;
-    }
-
-    .booth_info span,.booth_info p
-    {
-        font-size: 1.6vw;
-    }
-    
-    .fa-utensils
-{
-    font-size: 2.4vw;
-    margin-right: 2vw;
 }
-.fa-instagram
-{
-    font-size: 2vw;
-}
-.line {
-    flex: 1; /* 남은 공간을 차지하도록 설정 */
-    border-top: 2.5px solid #9F8BEE; /* 실선 추가 */
-}
-} 
 
 *
 {
@@ -449,14 +365,34 @@ font-face {
 }
 
 body
-{
+{ 
+    /* background: linear-gradient(to bottom, #3b2862, #2c2f74, #cbbce3); */
     /* background: url(/static/images/poster.jpg); */
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     /* background-position: 0%; */
-    background-size: cover; /* 화면에 맞게 배경 이미지 크기 조정 */
-    overflow: hidden; /* 스크롤 방지 */
-    background-attachment: fixed;
-    height: 100vh;
-    width: 100vw;
+    /* background-size: cover; 화면에 맞게 배경 이미지 크기 조정 */
+    overflow: hidden; 
+    /* background-attachment: fixed; */
+    height: 100%; /* html과 body의 높이를 100%로 설정 */
+    width: 100%;
      /* 전체 화면 크기로 고정 */
+}
+/* 웹킷 기반 브라우저 (Chrome, Safari 등) */
+.content_box {
+    -webkit-overflow-scrolling: touch; /* 부드러운 스크롤 유지 */
+    overflow: scroll;
+}
+
+.content_box::-webkit-scrollbar {
+    display: none; /* 스크롤바 숨기기 */
+}
+
+/* Firefox */
+.content_box {
+    scrollbar-width: none; /* 스크롤바 너비 없애기 */
+}
+
+/* Edge, Internet Explorer */
+.content_box {
+    -ms-overflow-style: none; /* 스크롤바 스타일 제거 */
 }
