--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -78,6 +78,45 @@
         };
     
         var map = new kakao.maps.Map(container, options);
+
+        var positions = [
+    {
+        title: '부스1', 
+        latlng: new kakao.maps.LatLng(35.153016, 128.098656)
+    },
+    {
+        title: '부스2', 
+        latlng: new kakao.maps.LatLng(35.153640, 128.099000)
+    },
+    {
+        title: '부스3', 
+        latlng: new kakao.maps.LatLng(35.152419, 128.102088)
+    },
+    {
+        title: '부스4',
+        latlng: new kakao.maps.LatLng(35.151877, 128.102978)
+    }
+];
+
+// 마커 이미지의 이미지 주소입니다
+var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png"; 
+    
+for (var i = 0; i < positions.length; i ++) {
+    
+    // 마커 이미지의 이미지 크기 입니다
+    var imageSize = new kakao.maps.Size(16, 23); 
+    
+    // 마커 이미지를 생성합니다    
+    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize); 
+    
+    // 마커를 생성합니다
+    var marker = new kakao.maps.Marker({
+        map: map, // 마커를 표시할 지도
+        position: positions[i].latlng, // 마커를 표시할 위치
+        title : positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+        image : markerImage // 마커 이미지 
+    });
+}
       </script>
     
 
