--- a/static/css/main/home_page2.css
+++ b/static/css/main/home_page2.css
@@ -40,46 +40,47 @@ font-face {
 #bubble1,
 #bubble2 {
   width: 50vh;
-  position: relative;
-  z-index: 1;
+  position: fixed;
+  z-index: 3;
 }
 
 #bubble1 {
-  top: 20vh;
+  top: 60vh;
   right: 30vh;
-  float: left;
 }
 
 #bubble2 {
   left: 30vh;
-  bottom: 40vh;
-  float: right;
+  bottom: 30vh;
 }
 
 .lineupContainer {
   position: relative;
   width: 100%;
-  height: 100vh; /* 부모 컨테이너가 뷰포트 전체를 차지하도록 설정 */
   display: flex;
   justify-content: center;
-  align-items: center; /* 수직 및 수평 중앙 정렬 */
-  overflow: hidden;
+  align-items: center;
+  overflow-x: scroll;
 }
 
 .lineUpList {
-  display: none; /* 기본적으로 숨김 상태 */
-  flex-direction: row; /* 가로로 나열 */
-  justify-content: center; /* 중앙 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
-  width: 100%; /* 전체 너비 사용 */
-  height: auto; /* 자동 높이 */
-  overflow-x: auto; /* 가로 스크롤 가능 */
-  white-space: nowrap; /* 텍스트 줄바꿈 방지 */
-  z-index: 2; /* 다른 요소보다 위에 표시 */
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
 }
 
-.entertainter {
-  width: 50vh; /* 엔터테이너 이미지 너비 */
-  scroll-snap-align: center; /* 스크롤 스냅 정렬 */
-  z-index: 3; /* 이미지가 다른 요소들 위에 있도록 설정 */
+.artist {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.artistName {
+  position: inherit;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 2vh;
+  font-family: Prata;
 }
