--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -73,7 +73,7 @@
 
     <!-- Page2 라인업 -->
     <div id="home_lineup">
-        <div class="blankTop">
+        <div class="blankTop2">
             <div class="lineUp">LINE UP</div>
             <div class="piestaDates">
                 <div class="date" data-date="10/16">10/16</div>
