프론트 마무링

--- a/static/css/comment/comment.css
+++ b/static/css/comment/comment.css
@@ -33,13 +33,9 @@ body {
   padding: 10px;
   border-top: 1px solid black;
   z-index: 1000;
-  max-width: 600px;
-  margin: 0 auto;
-  width: 100%;
+  width: 98vw;
   display: flex;
   align-items: center;
-  flex: 1; /* Takes up available space */
-  overflow-y: auto; /* Enables scrolling */
 }
 
 #comments-container {
@@ -103,7 +99,7 @@ button:hover {
   }
 
   #comment-input {
-    width: 70%;
+    width: 65%;
     height: 7vh;
     margin: 0;
     border-radius: 15px;
@@ -114,9 +110,10 @@ button:hover {
     border: solid black 1px;
     border-radius: 15px;
     cursor: pointer;
-    width: 20vw;
+    width: 15vw;
     height: 7vh;
     margin-left: 3vw;
+    margin-right: 3vw;
     font-size: 7vw;
   }
 
@@ -193,6 +190,7 @@ button:hover {
     border-radius: 15px;
     cursor: pointer;
     margin-left: 1.5vw;
+    margin-right: 1.5vw;
     width: 13vw;
     height: 10vh;
     padding: 10px;
