--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -8,6 +8,8 @@
     padding: 0;
   }
   
+
+
   .header {
     text-align: center;
     padding: 20px 0;
@@ -62,21 +64,6 @@
   }
   
 
-  .day-column:not(:first-child) {
-    border-left: 2px solid #f39ac8; /* Vertical line between day-columns */
-    padding-left: 0; /* Remove padding to center the line */
-  }
-
-  .day-column .day,
-  .day-column .events-day {
-    padding-left: 10px; /* Add padding to the content, not the column */
-  }
-
-  .day-column:not(:first-child) .day,
-  .day-column:not(:first-child) .events-day {
-    border-left: 2px solid transparent; /* No additional line here */
-  }
-
   
   
   .day {
@@ -92,25 +79,35 @@
     display: grid;
     grid-template-rows: repeat(20, 40px);
     gap: 7px;
+    border-left: 2px solid #000000; /* 수직선 추가 */
+    padding-left: 10px; /* 수직선과 내용 사이의 간격 추가 */
+    width: 100%; /* 부모 요소인 events-day의 너비와 맞춤 */
+    box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
     }
-  
+    
+  .day-column:first-child .events-day {
+      border-left: none; /* 첫 번째 day-column의 수직선 제거 */
+      padding-left: 0; /* 첫 번째 요소의 패딩 제거 */
+  }
   .event {
     position: relative;
     background-color: #7d50d0;
     display: flex;
     align-items: center;
-    /* padding: 10px; */
+    padding: 10px;
     font-size: 12px;
     font-weight: 600;
     cursor: pointer;
     gap: 7px;
+    width: 100%; /* 부모 요소인 events-day의 너비와 맞춤 */
+    box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
 }
 
   .event-time {
     position: absolute;
     top: 7px;
     left: 7px;
-    font-size: 8px;
+    font-size: 20px;
     color: #FEE5C6;
 }
 
