--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -31,6 +31,7 @@
       src="{{ url_for('static', path='js/main/logo.js') }}"
       defer
     ></script> 
+    <script src="https://kit.fontawesome.com/2b7b5f2141.js" crossorigin="anonymous"></script>
 
     <title>2024 GNU FIESTA</title>
   </head>
@@ -124,6 +125,7 @@ for (var i = 0; i < positions.length; i ++) {
     <div class="box-container">
         <div class="box">
             <div class="box-icon">
+              <i class="fa-solid fa-utensils"></i>
             </div>
             <div class="box-content">
                 <p class="box-title">멋쟁이사자처럼</p>
@@ -132,6 +134,7 @@ for (var i = 0; i < positions.length; i ++) {
         </div>
         <div class="box">
             <div class="box-icon">
+              <i class="fa-solid fa-utensils"></i>
             </div>
             <div class="box-content">
                 <p class="box-title">멋쟁이사자처럼</p>
@@ -140,6 +143,7 @@ for (var i = 0; i < positions.length; i ++) {
         </div>
         <div class="box">
             <div class="box-icon">
+              <i class="fa-solid fa-utensils"></i>
             </div>
             <div class="box-content">
                 <p class="box-title">멋쟁이사자처럼</p>
@@ -148,6 +152,7 @@ for (var i = 0; i < positions.length; i ++) {
         </div>
         <div class="box">
             <div class="box-icon">
+              <i class="fa-solid fa-utensils"></i>
             </div>
             <div class="box-content">
                 <p class="box-title">멋쟁이사자처럼</p>
@@ -156,6 +161,7 @@ for (var i = 0; i < positions.length; i ++) {
         </div>
         <div class="box">
           <div class="box-icon">
+            <i class="fa-solid fa-utensils"></i>
           </div>
           <div class="box-content">
               <p class="box-title">멋쟁이사자처럼</p>
@@ -164,6 +170,7 @@ for (var i = 0; i < positions.length; i ++) {
       </div>
       <div class="box">
         <div class="box-icon">
+          <i class="fa-solid fa-utensils"></i>
         </div>
         <div class="box-content">
             <p class="box-title">멋쟁이사자처럼</p>
@@ -172,6 +179,7 @@ for (var i = 0; i < positions.length; i ++) {
       </div>
       <div class="box">
         <div class="box-icon">
+          <i class="fa-solid fa-utensils"></i>
         </div>
         <div class="box-content">
             <p class="box-title">멋쟁이사자처럼</p>
