--- a/static/css/booth/booth_detail.css
+++ b/static/css/booth/booth_detail.css
@@ -5,9 +5,10 @@ font-face {
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
 }/* 제목 BOOTH */
 .title {
+    color: white;
      font-family: 'Felixti';
     font-size: 7vw;
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
     margin-top: 35vw; /* 여백 조정 */
     position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
@@ -74,11 +75,12 @@ font-face {
 
 .menu_box p
 {
-    flex: 1; /* 메뉴 이름과 가격의 비율을 동일하게 유지 */
+    /* flex: 1;  */
+    /* 메뉴 이름과 가격의 비율을 동일하게 유지 */
     text-align: center;
 }
 .separator {
-    width: 50%; /* 선의 전체 길이 */
+    width: 55%; /* 선의 전체 길이 */
     height: 2px; /* 선의 두께 */
     background-image: repeating-linear-gradient(
         to right,
@@ -192,11 +194,7 @@ font-face {
     margin-bottom:5.5vh;
 }
 
-.booth_time img
-{
-   width: 10vw;
-    margin: auto 0;
-}
+
 
 .booth_name
 {
@@ -205,7 +203,6 @@ font-face {
 
 .booth_time p
 {
-    margin-left: 4.5vw;
     margin-bottom: 2.3vw;
 }
 .fa-circle
@@ -238,7 +235,7 @@ font-face {
    /* 제목 BOOTH */
    .title {
     font-size: 7vw;
-    color: #000000;
+    color: white;
     text-align: center;
     margin-top: 35vw; /* 여백 조정 */
     position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
@@ -275,17 +272,10 @@ font-face {
         font-size: 3.05vw;
     }
  
- 
-   .booth_time img
-   {
-       width: 10vw;
-        margin: auto 0;
-    }
 
     
     .booth_time p
     {
-        margin-left: 4.5vw;
         margin-bottom: 2.3vw;
     }
 
@@ -364,16 +354,12 @@ font-face {
     padding: 0;
 }
 
+html,
 body
 { 
-    /* background: linear-gradient(to bottom, #3b2862, #2c2f74, #cbbce3); */
-    /* background: url(/static/images/poster.jpg); */
-    /* background-repeat: no-repeat; */
-    /* background-position: 0%; */
-    /* background-size: cover; 화면에 맞게 배경 이미지 크기 조정 */
+    background: linear-gradient(to bottom, #3b2862, #2c2f74, #cbbce3);
     overflow: hidden; 
-    /* background-attachment: fixed; */
-    height: 100%; /* html과 body의 높이를 100%로 설정 */
+    height: 100%;
     width: 100%;
      /* 전체 화면 크기로 고정 */
 }
