home page1 update

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -61,9 +61,9 @@
                 <img src="{{ url_for('static', path='images/PIESTA_poster.jpeg')}}" id="poster">
             </div>
             <div class="ddayTop">
-                <div class="dday">2024.10.16 WED</div>
+                <div class="dday">2024.10.16 WED ~ 10.18 FRI</div>
                 <div class="countdownDay">
-                    <div class="dday">D - </div>
+                    <div class="dday">D -&nbsp;</div>
                     <div id="countdown"></div>
                 </div>
             </div>
