--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -1,14 +1,37 @@
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ휴대폰 */
 @media (max-width: 1024px) {
   body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* 수직 중앙 정렬 */
+    align-items: center; /* 수평 중앙 정렬 */
+    min-height: 100vh; /* 전체 화면 높이 */
+    margin: 0;
     font-family: 'prata', sans-serif;
     background-color: #2b2355;
     color: white;
-    margin: 0;
     padding: 0;
   }
   
-
+  .mainpage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 100px;
+  }
+  
+  .timetable {
+    display: grid;
+    grid-template-columns: 0.3fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(20, 40px);
+    gap: 7px;
+    padding: 15px;
+    margin: 0 auto; /* 수평 중앙 정렬 */
+  }
+  
+  
 
   .header {
     text-align: center;
@@ -19,17 +42,10 @@
     /* margin-top: 50px; */
   }
   
-  .timetable {
-    display: grid;
-    grid-template-columns: 0.3fr 1fr 1fr 1fr; /* 첫 번째 열 크기 수정 */
-    grid-template-rows: repeat(18, 40px); /* 시간과 이벤트 그리드의 행을 동일하게 설정 */
-    gap: 7px;
-    padding: 15px;
-  }
 
   .times {
     display: grid;
-    grid-template-rows: repeat(18, 40px); /* 시간도 동일한 행 크기를 공유 */
+    grid-template-rows: repeat(20, 40px); /* 시간도 동일한 행 크기를 공유 */
     align-items: center;
     justify-content: flex-end;
     gap: 7px;
@@ -84,18 +100,15 @@
     width: 100%; /* 부모 요소인 events-day의 너비와 맞춤 */
     box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
     }
-    
-  .day-column:first-child .events-day {
-      border-left: none; /* 첫 번째 day-column의 수직선 제거 */
-      padding-left: 0; /* 첫 번째 요소의 패딩 제거 */
-  }
+
+
   .event {
     position: relative;
     background-color: #7d50d0;
     display: flex;
     align-items: center;
     padding: 10px;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 600;
     cursor: pointer;
     gap: 7px;
@@ -105,10 +118,10 @@
 
   .event-time {
     position: absolute;
-    top: 7px;
+    top: 2px;
     left: 7px;
-    font-size: 20px;
-    color: #FEE5C6;
+    font-size: 7px !important;
+    color: #FEE5C6 !important;
 }
 
   .icon {
