--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -123,7 +123,7 @@ for (var i = 0; i < positions.length; i ++) {
 
     <!-- 박스 목록 스크롤 영역 -->
     <div class="box-container">
-        <div class="box">
+      <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
             <div class="box-icon">
               <i class="fa-solid fa-utensils"></i>
             </div>
@@ -132,7 +132,7 @@ for (var i = 0; i < positions.length; i ++) {
                 <p class="box-description">음식 부스</p>
             </div>
         </div>
-        <div class="box">
+        <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
             <div class="box-icon">
               <i class="fa-solid fa-utensils"></i>
             </div>
@@ -141,7 +141,7 @@ for (var i = 0; i < positions.length; i ++) {
                 <p class="box-description">음식 부스</p>
             </div>
         </div>
-        <div class="box">
+        <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
             <div class="box-icon">
               <i class="fa-solid fa-utensils"></i>
             </div>
@@ -150,7 +150,7 @@ for (var i = 0; i < positions.length; i ++) {
                 <p class="box-description">음식 부스</p>
             </div>
         </div>
-        <div class="box">
+        <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
             <div class="box-icon">
               <i class="fa-solid fa-utensils"></i>
             </div>
@@ -159,7 +159,7 @@ for (var i = 0; i < positions.length; i ++) {
                 <p class="box-description">음식 부스</p>
             </div>
         </div>
-        <div class="box">
+        <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
           <div class="box-icon">
             <i class="fa-solid fa-utensils"></i>
           </div>
@@ -168,7 +168,7 @@ for (var i = 0; i < positions.length; i ++) {
               <p class="box-description">음식 부스</p>
           </div>
       </div>
-      <div class="box">
+      <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
         <div class="box-icon">
           <i class="fa-solid fa-utensils"></i>
         </div>
@@ -177,7 +177,7 @@ for (var i = 0; i < positions.length; i ++) {
             <p class="box-description">음식 부스</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box" onclick="window.location.href='http://127.0.0.1:8000/GNU_PIESTA/booth_detail';">
         <div class="box-icon">
           <i class="fa-solid fa-utensils"></i>
         </div>
