--- a/static/css/main/home_page2.css
+++ b/static/css/main/home_page2.css
@@ -58,29 +58,33 @@ font-face {
   position: relative;
   width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  overflow-x: scroll;
 }
 
 .lineUpList {
+  position: relative;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 300px;
+  overflow: auto;
+  white-space: nowrap;
 }
 
 .artist {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 1vh;
+  width: 100%;
+  max-width: 35vh;
+  min-width: 35vh;
+  border-radius: 10%;
 }
 
 .artistName {
-  position: inherit;
-  justify-content: center;
+  text-align: center;
   align-items: center;
   color: white;
   font-size: 2vh;
   font-family: Prata;
+}
+
+.lineUpList::-webkit-scrollbar {
+  display: none;
 }
