--- a/static/css/main/home_page2.css
+++ b/static/css/main/home_page2.css
@@ -53,7 +53,7 @@ font-face {
   left: 30vh;
   bottom: 30vh;
 }
-
+/* 
 .lineupContainer {
   position: relative;
   width: 100%;
@@ -87,4 +87,39 @@ font-face {
 
 .lineUpList::-webkit-scrollbar {
   display: none;
+} */
+
+.lineUpContainer {
+  padding: 0 15vw;
+  margin-top: 5vh;
+}
+
+.lineUpList {
+  padding: 0 15vw;
+  overflow-x: scroll;
+  display: flex;
+}
+
+.lineUpList::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge에서 스크롤바 숨기기 */
+}
+
+.artistContainer {
+  flex: 0 0 70vw;
+  padding-right: 20px;
+}
+
+.artist {
+  margin: 1vh;
+  width: 100%;
+
+  border-radius: 10%;
+}
+
+.artistName {
+  text-align: center;
+  align-items: center;
+  color: white;
+  font-size: 2vh;
+  font-family: Prata;
 }
