--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -19,6 +19,7 @@
     <script src="{{ url_for('static', path='js/main/home.js') }}" defer></script>
     <script src="{{ url_for('static', path='js/main/hamberger.js') }}" defer></script>
     <script src="{{ url_for('static', path='js/main/logo.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/main/lineupScroll.js') }}" defer></script>
     <title>2024 GNU FIESTA</title>
 </head>
 
@@ -84,50 +85,51 @@
                 <img src="{{ url_for('static', path='images/bubble.svg')}}" alt="bubble" id="bubble1" />
                 <img src="{{ url_for('static', path='images/bubble.svg')}}" alt="bubble" id="bubble2" />
             </div>
+
             <div class="lineupContainer">
                 <div class="lineUpList" id="lineup/16">
-                    <div id="RoyKim">
+                    <div id="RoyKim" class="artistContainer">
                         <img src="{{ url_for('static', path='images/16_artist1.png')}}" class="artist" />
                         <div class="artistName">ROY KIM</div>
                     </div>
-                    <div id="Bol4">
+                    <div id="Bol4" class="artistContainer">
                         <img src="{{ url_for('static', path='images/16_artist2.png')}}" class="artist" />
                         <div class="artistName">BOL 4</div>
                     </div>
                 </div>
 
                 <div class="lineUpList" id="lineup/17">
-                    <div id="Unis">
+                    <div id="Unis" class="artistContainer">
                         <img src="{{ url_for('static', path='images/17_artist1.png')}}" class="artist" />
                         <div class="artistName">UNIS</div>
                     </div>
-                    <div id="TripleS">
+                    <div id="TripleS" class="artistContainer">
                         <img src="{{ url_for('static', path='images/17_artist2.png')}}" class="artist" />
                         <div class="artistName">TRIPLE S</div>
                     </div>
-                    <div id="JoYuri">
+                    <div id="JoYuri" class="artistContainer">
                         <img src="{{ url_for('static', path='images/17_artist3.png')}}" class="artist" />
                         <div class="artistName">JO YURI</div>
                     </div>
-                    <div id="Yena">
+                    <div id="Yena" class="artistContainer">
                         <img src="{{ url_for('static', path='images/17_artist4.png')}}" class="artist" />
                         <div class="artistName">YENA</div>
                     </div>
                 </div>
 
                 <div class="lineUpList" id="lineup/18">
-                    <div id="BewhY">
+                    <div id="BewhY" class="artistContainer">
                         <img src="{{ url_for('static', path='images/18_artist1.png')}}" class="artist" />
                         <div class="artistName">BEWH Y</div>
                     </div>
-                    <div id="AshIsland">
+                    <div id="AshIsland" class="artistContainer">
                         <img src="{{ url_for('static', path='images/18_artist2.png')}}" class="artist" />
                         <div class="artistName">ASH ISLAND</div>
                     </div>
                 </div>
+
             </div>
         </div>
-    </div>
     </div>
 
 
