--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -32,7 +32,7 @@
     <div id="navContainer">
         <div id="hrefHOME" data-url="/home">HOME</div>
         <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
-        <div id="hrefBOOTH" data-url="/">BOOTH</div>
+        <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
         <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
         <div id="hrefFAQ" data-url="faq">FAQ</div>
     </div>
