--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -70,9 +70,11 @@
         <div class="ff sb booth_tt">
             <div class="booth_name">
                 <!-- <img src="" alt="booth_icon"> --><!-- fontawesome 아이콘이 더 나은가 싶기도 해서-->
-                <h3><i class="fa-solid fa-utensils"></i>식품공작소</h3>
+                <h3><i class="fa-solid fa-utensils"></i>{{ booth.booth_name }}</h3>
                 <div class="booth_info">
-                    <p><i class="fa-solid fa-circle"></i><span>식품공학과</span>|<a href=""><i class="fa-brands fa-instagram"></i></a></p>
+                    <p><i class="fa-solid fa-circle"></i><span>{{ booth.organizer }}</span>|<a href="https://www.instagram.com/{{ booth.instagram_id }}" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a></p>
                 </div>
             </div>
             <div class="heart">
@@ -85,39 +87,37 @@
         <div class="line-wrapper">
             <h4>부스 소개</h4><div class="line"></div>
         </div>
-        <p>식품공작소는 경상국립대 식품공학과 학생들이 직접 기획하고 운영하는 부스입니다. 사람과 동물을 위한 다양한 식품을 고민하고 연구하는 이곳에서, 이번 대동제를 맞아 소개하는 특별한 제품들을 만나보세요! 😄</p>
+        <p>{{ booth.booth_description }}</p>
     </section>
+
     <section class="booth_detail booth_menu">
         <div class="line-wrapper">
-            <h4>부스 메뉴</h4><div class="line"></div>
+            <h4>부스 메뉴</h4>
+            <div class="line"></div>
         </div>
+        {% for menu_item in booth.menus %}
         <div class="menu_box">
-            <p>소떡소떡</p>
-            <div class="separator"></div> <!-- 점선 구분선 추가 -->
-            <p>3,500원</p>
+            <p>{{ menu_item.item }}</p> <!-- 메뉴 이름을 출력 -->
+            <div class="separator"></div>
+            <p>{{ menu_item.price }}원</p> <!-- 가격을 출력 -->
         </div>
-        <div class="menu_box">
-            <p>소떡소떡</p>
-            <div class="separator"></div> <!-- 점선 구분선 추가 -->
-            <p>3,500원</p>
-        </div>
-        <div class="menu_box">
-            <p>소떡소떡</p>
-            <div class="separator"></div> <!-- 점선 구분선 추가 -->
-            <p>3,500원</p>
-        </div>
+        {% else %}
+        <p>등록된 메뉴가 없습니다.</p> <!-- 메뉴가 없을 경우 출력 -->
+        {% endfor %}
     </section>
+    
+
     <section class="booth_detail booth_time">
         <div class="line-wrapper">
             <h4>위치 및 운영 시간</h4><div class="line"></div>
         </div>
-        <p>    
+        <p>
             <i class="fa-solid fa-circle"></i>
-            위치 : <span>452동과 교양동 사이 오르막</span>
+            위치 : <span>{{ booth.location_description }}</span> <!-- 부스 위치 동적으로 출력 -->
         </p>
         <p>
             <i class="fa-solid fa-circle"></i>
-            운영시간 : <span>11:00 ~ 16:00</span>
+            운영시간 : <span>{{ booth.operation_hours }}</span> <!-- 운영 시간 동적으로 출력 -->
         </p>
     </section>
 </div>
